# ipynb_convert

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/ipynb_convert/: __init__.py  convert.py
src/ipynb_convert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_convert.py  tester.ipynb  tester.py  to_py.ipynb
